# nextjs-page

./: .gitignore  DATABASE_QUERIES.sql  README.md  eslint.config.js  next.config.mjs  package-lock.json  package.json  setup.sh  tailwind.config.cjs  tsconfig.json  vercel.json
app/: globals.css  layout.js  page.js
app/api/blob/: route.ts
app/api/cron/sync-news/: route.js
app/api/generate/: route.js
app/api/news/: route.js
app/api/validate/: route.js
app/components/: ArithmeticSection.js  DefaultSection.js  GamesSection.js  MinesweeperGame.js  NewsArticle.js  NewsSection.js  OperationSection.js  QuestionSummary.js  Sidebar.js  SudokuGame.js  TriviaSection.js
app/lib/: gameEngines.js  mathUtils.js  newsUtils.js  operations.js  triviaUtils.js
lib/: db.js  getNews.js  initDb.js  newsSync.js
newsdb/: Cargo.toml
newsdb/src/: main.rs
